Fix missing 'else' in eager saving