@@ -1,0 +1,36 @@
+#  Copyright (c) 2022. Davi Pereira dos Santos
+#  This file is part of the i-dict project.
+#  Please respect the license - more about this in the section (*) below.
+#
+#  i-dict is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+#
+#  i-dict is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with i-dict.  If not, see <http://www.gnu.org/licenses/>.
+#
+#  (*) Removing authorship by any means, e.g. by distribution of derived
+#  works or verbatim, obfuscated, compiled or rewritten versions of any
+#  part of this work is illegal and it is unethical regarding the effort and
+#  time spent here.
+#
+from pprint import pprint
+
+import dill
+
+from idict.core.idict_ import Idict
+from idict.function.dataset import arff2df
+
+d = Idict(x=2) >> (lambda x: {"y": x ** 2})
+dump = dill.dumps(d, protocol=5)
+d2 = dill.loads(dump)
+# pprint(d2)
+d2.show()
+d2.evaluate()
+d2.show()
